--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'HG'
 - !lcsh 'Capital'
 - !lcsh 'Capitalists and financiers -- United States'
+- GITenberg
 title: High Finance
 url: http://www.gutenberg.org/ebooks/29256
